# nlq

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  test_delete.py
db_arena/: README.MD  docker-compose.yml
db_arena/migrator/: Dockerfile  migrator.sh
docs/: DATABASE_SETUP.md  PROJECT_STRUCTURE.md
src/: __init__.py
src/agent/: __init__.py  agent.py  graph.py  query_engine.py  result_storage.py
src/agent/tools/: mongodb_tools.py  sql_tools.py
src/database/: executor.py  manager.py  schemas.py
src/models/: __init__.py  config.py  ollama_api.py  ollama_manager.py  query_engine.py
src/rag/: manager.py
src/schema/: __init__.py  extractor.py  manager.py  schemas.py
src/ui/: app.py  chat.py  connections_tab.py  ollama_tab.py  query_tab.py  sql_query_tab.py  theme.py
