[project]
name = "nlq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gradio>=5.49.1",
    "ipykernel>=7.0.1",
    "langchain>=1.0.0",
    "langchain-community>=0.4",
    "langchain-mongodb>=0.7.1",
    "langchain-ollama>=1.0.0",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9.9"]
mysql = ["mysql-connector-python>=8.0.33"]
sqlserver = ["pyodbc>=5.0.1"]
mongodb = ["pymongo>=4.6.0"]
all-databases = [
    "psycopg2-binary>=2.9.9",
    "mysql-connector-python>=8.0.33",
    "pyodbc>=5.0.1",
    "pymongo>=4.6.0",
]
