[project]
name = "nlq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.3.4",
    "gradio>=5.49.1",
    "ipykernel>=7.0.1",
    "langchain>=1.0.0",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4",
    "langchain-mongodb>=0.7.1",
    "langchain-ollama>=1.0.0",
    "langgraph>=1.0.0",
    "unstructured[pdf]>=0.18.18",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9.9"]
mysql = ["mysql-connector-python>=8.0.33"]
sqlserver = ["pyodbc>=5.0.1"]
mongodb = ["pymongo>=4.6.0"]
all-databases = [
    "psycopg2-binary>=2.9.9",
    "mysql-connector-python>=8.0.33",
    "pyodbc>=5.0.1",
    "pymongo>=4.6.0",
]
